--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_install:
   - go get -u github.com/kardianos/govendor
   - govendor sync
   - sudo apt-get -qq update
-  - sudo apt-get install -y poppler-utils
+  - sudo apt-get install -y poppler-utils libleptonica-dev libtesseract-dev tesseract-ocr
 script:
   - go test
