Verify pdftotext version

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ before_install:
   - sudo apt-get install -y poppler-utils libleptonica-dev libtesseract-dev tesseract-ocr
   - go get -u -t -v ./...
 script:
+  - pdftotext -v
   - go test -v ./...
