Add case for test in travis (#17)
* Verify pdftotext version

* Change dist to test pdftotext version

* Add wantTravis to TestConvertPDF pass on Travis

* Remove blank lines

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial
 language: go
 os:
   - linux
@@ -12,4 +13,5 @@ before_install:
   - sudo apt-get install -y poppler-utils libleptonica-dev libtesseract-dev tesseract-ocr
   - go get -u -t -v ./...
 script:
+  - pdftotext -v
   - go test -v ./...
